--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,6 @@ properties:
 spring:
 
   datasource:
-    url: jdbc:mysql://localhost:3306/fakebank
+    url: jdbc:mysql://localhost:3306/dummy
 
     driverClassName: com.mysql.jdbc.Driver
